Login functionality added

--- a/Book_Bazaar/appsettings.json
+++ b/Book_Bazaar/appsettings.json
@@ -8,10 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": { "MyCon": "Data Source=DEL1-LHP-N72003;Initial Catalog=Book_Bazaar;Integrated Security=true;MultipleActiveResultSets=True;TrustServerCertificate=True;" },
   "EmailConfiguration": {
-    "From": "priyanshugurugram@gmail.com",
+    "From": "vishvajeetwork01@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "priyanshugurugram@gmail.com",
-    "Password": "dlbxhviusozctwvp"
+    "Username": "vishvajeetwork01@gmail.com",
+    "Password": "mogfhqjtutcgvlxk"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:3000", //client url i.e frontend application server url
+    "ValidIssuer": "http://localhost:7196", //url on which api is run that we have to write here
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   }
 }
