new features by vishvajeet

--- a/Book_Bazaar/Book_Bazaar.csproj
+++ b/Book_Bazaar/Book_Bazaar.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Models\Authentication\NewFile.txt" />
-    <None Remove="Models\NewFile.txt" />
+    <Content Include="Properties\launchSettings.json" />
   </ItemGroup>
 
   <ItemGroup>
